Clarify that KDE is prohibitively expensive for Lotka-Volterra sample rather than infeasible

--- a/report/report.tex
+++ b/report/report.tex
@@ -743,7 +743,7 @@ Comparing the performance of Stein thinning against na\"ive thinning (\Cref{fig:
 
 The validation sample we use for calculating the energy distance in this case was obtained by running the HMC algorithm as implemented in the \texttt{PyStan}\footnote{\url{https://pystan.readthedocs.io}} library for 10,000 steps with the starting points shown in \Cref{table:lotka-volterra:starting_values} and concatenating the results for the five chains.
 
-\paragraph{Gradient-free Stein thinning.} The choice of KDE as the auxiliary distribution, which performed best for the Gaussian mixture in \Cref{sec:gaussian-mixture}, becomes computationally infeasible here due to the size of the sample. Indeed, KDE places a kernel at the location of each sample point, so the cost of evaluating the resulting density once is $O(n)$, where $n$ is the sample size, since contributions from all kernels need to be added. \Cref{alg:gf} requires density estimates for each element of the sample, thus the total computational cost grows as $O(n^2)$ and becomes prohibitive for large samples. An alternative could be to place KDE kernels at a subset of points from the sample, however selecting such a subset is equivalent to the problem that thinning is trying to solve in the first place.
+\paragraph{Gradient-free Stein thinning.} The choice of KDE as the auxiliary distribution, which performed best for the Gaussian mixture in \Cref{sec:gaussian-mixture}, becomes prohibitively expensive here due to the size of the sample. Indeed, KDE places a kernel at the location of each sample point, so the cost of evaluating the resulting density once is $O(n)$, where $n$ is the sample size, since contributions from all kernels need to be added. \Cref{alg:gf} requires density estimates for each element of the sample, thus the total computational cost grows as $O(n^2)$ and becomes prohibitive for large samples. An alternative could be to place KDE kernels at a subset of points from the sample, however selecting such a subset is equivalent to the problem that thinning is trying to solve in the first place.
 
 As in the case of the Gaussian mixture, the Laplace approximation fails to produce a thinned sample here due to ratio $q(x) / p(x)$ vanishing away from the mode, so we turn to a multivariate Gaussian with the mean and covariance matching the sample mean and covariance (``simple Gaussian''). \Cref{fig:lotka-volterra:gf-thinning:energy-distance} shows that the gradient-free approach is competitive with standard Stein thinning for chains 2-5 in terms of the resulting energy distance metric, but performs worse for the first chain. Most encouragingly, the gradient-free approach handles the sample from chain 4 well.
 
