Function to calculate speedup in JAX demo notebook for thinning

--- a/code/notebooks/examples/JAX_Stein_Thinning.ipynb
+++ b/code/notebooks/examples/JAX_Stein_Thinning.ipynb
@@ -3,6 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "dc5ee4dc-65b0-41d1-ada0-6ae70de922e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: JAX_ENABLE_X64=True\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env JAX_ENABLE_X64 True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "5b93acd0-c8af-4784-8ca0-f630868566f2",
    "metadata": {},
    "outputs": [],
@@ -25,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "212e0773-6cc9-4ebb-84a3-85465b120efd",
    "metadata": {},
    "outputs": [],
@@ -35,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fd786c89-d30b-41bb-b26a-a7e5fdead569",
    "metadata": {},
    "outputs": [],
@@ -49,22 +67,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b8761205-ee6f-4689-8868-6a5dcbc65c93",
    "metadata": {},
    "outputs": [],
    "source": [
+    "n_max = 1_000_000\n",
     "n = 100_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "49675a41-12f2-451d-a3ff-ad0f84072b05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = mvn.rvs(mean=mean, cov=cov, size=n, random_state=rng)\n",
+    "sample = mvn.rvs(mean=mean, cov=cov, size=n_max, random_state=rng)\n",
     "grad = (np.linalg.inv(cov) @ (mean - sample).T).T"
    ]
   },
@@ -78,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0b8fa7d9-4950-4da6-a57b-f54b469c3c8f",
    "metadata": {},
    "outputs": [],
@@ -88,17 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fab719ec-30e0-4e1c-8680-682d9f954a4b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = thin(sample, grad, m)"
+    "idx = thin(sample[:n], grad[:n], m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e6449655-16d8-47fd-8eb7-49b0ed34ef0e",
    "metadata": {},
    "outputs": [
@@ -115,7 +134,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots();\n",
-    "ax.scatter(sample[:, 0], sample[:, 1], color='lightgray');\n",
+    "ax.scatter(sample[:n, 0], sample[:n, 1], color='lightgray');\n",
     "ax.scatter(sample[idx, 0], sample[idx, 1], color='red');"
    ]
   },
@@ -131,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ed4dcae1-79ea-413b-b665-7e11f22385e5",
    "metadata": {},
    "outputs": [
@@ -139,13 +158,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.9 s ± 91.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "12 s ± 13.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "thin(sample, grad, m)"
+    "thin(sample[:n], grad[:n], m)"
    ]
   },
   {
@@ -158,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "67999727-6002-4258-af1b-86088a5e4ff4",
    "metadata": {},
    "outputs": [],
@@ -169,18 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0f5d8f0d-bdaa-4253-afe3-6400424e79eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s, g = _validate_and_standardize(sample, grad, True)\n",
+    "s, g = _validate_and_standardize(sample[:n], grad[:n], True)\n",
     "vfk0 = make_imq(s, 'id')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "13ed3f76-4237-43a7-ad8d-546aa109c9e3",
    "metadata": {},
    "outputs": [],
@@ -191,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "73f3416e-83d8-4090-bb7c-be4e8824aba2",
    "metadata": {},
    "outputs": [],
@@ -201,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3672f063-46d4-4330-a399-2c72c92e938e",
    "metadata": {},
    "outputs": [],
@@ -211,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "625711f4-28b9-4d86-82e0-6c758cd648c0",
    "metadata": {},
    "outputs": [
@@ -219,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.9 s ± 29.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "12 s ± 53.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -238,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "9a7025bb-f901-4221-aa5c-f85d6f1fe47d",
    "metadata": {},
    "outputs": [],
@@ -262,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "60651fbe-c88d-4eac-938d-403ce05e5546",
    "metadata": {},
    "outputs": [
@@ -270,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16 s ± 200 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "12 s ± 26.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -289,23 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "191897d8-d747-4a08-9ffe-adbb29744e99",
    "metadata": {},
    "outputs": [],
    "source": [
     "import jax\n",
     "import jax.numpy as jnp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "b1790cad-1578-406e-a4ce-677e44fda377",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jax.config.update(\"jax_enable_x64\", True)"
    ]
   },
   {
@@ -321,16 +330,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "64d8d156-11ce-41eb-b41a-ba1e3de6dc93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preconditioner = make_precon(s, 'id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
    "id": "2701de28-1712-4569-8e02-4feb9eba3241",
    "metadata": {},
    "outputs": [],
@@ -343,6 +342,16 @@
     "    t2 = -2 * beta * (jnp.trace(linv) + jnp.sum(jnp.dot(linv, sx.T - sy.T) * xmy, axis=0)) / (qf ** (-beta + 1))\n",
     "    t3 = jnp.sum(sx.T * sy.T, axis=0) / (qf ** (-beta))\n",
     "    return t1 + t2 + t3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "64d8d156-11ce-41eb-b41a-ba1e3de6dc93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preconditioner = make_precon(s, 'id')"
    ]
   },
   {
@@ -413,7 +422,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.5 s ± 533 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "10.4 s ± 19.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -443,23 +452,16 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9c886c0a-df54-4d6f-a422-7e7dd15984c1",
+   "id": "7cc6a1c9-b909-4ef3-8a2b-5aadbbee8d34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s_jax = jnp.array(s)\n",
-    "g_jax = jnp.array(g)\n",
-    "preconditioner_jax = jnp.array(preconditioner)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "fdb9a722-86a7-41df-a118-cfd5c91a2137",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _greedy_search_jax(n_points: int):\n",
+    "def greedy_search_jax(n, m):\n",
+    "    s, g = _validate_and_standardize(sample[:n], grad[:n], True)\n",
+    "    s_jax = jnp.array(s)\n",
+    "    g_jax = jnp.array(g)\n",
+    "    preconditioner_jax = jnp.array(preconditioner)\n",
+    "\n",
     "    k0 = vfk0_imq(s_jax, s_jax, g_jax, g_jax, preconditioner_jax)\n",
     "    idx0 = jnp.argmin(k0)\n",
     "    def body_fun(val, i):\n",
@@ -467,23 +469,23 @@
     "        k0 = val[1] + 2 * vfk0_imq(s_jax, s_jax[prev_idx].reshape(1, -1), g_jax, g_jax[prev_idx].reshape(1, -1), preconditioner_jax)\n",
     "        selected_idx = jnp.argmin(k0)\n",
     "        return (selected_idx, k0), selected_idx\n",
-    "    _, idx  = scan(body_fun, (idx0, k0), jnp.arange(1, n_points))\n",
+    "    _, idx  = scan(body_fun, (idx0, k0), jnp.arange(1, m))\n",
     "    return np.concatenate([[idx0], idx])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "0a20833b-a457-4f4b-a5d9-135f66d90466",
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx4 = _greedy_search_jax(m)"
+    "idx4 = greedy_search_jax(n, m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "69565446-0a8e-4173-9bb6-f5ab6c0b17cc",
    "metadata": {},
    "outputs": [],
@@ -501,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "be5a07d8-873b-4a14-b95c-08e1f63b303f",
    "metadata": {},
    "outputs": [
@@ -509,13 +511,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.68 s ± 78.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "8.52 s ± 109 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "_greedy_search_jax(m)"
+    "greedy_search_jax(n, m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec53f5f3-aa3f-4148-81c2-8dcc895e833a",
+   "metadata": {},
+   "source": [
+    "Plot the speedup from using JAX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "deee3885-c7e4-44c4-9b48-975f1f8d3d6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import timeit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a4212662-256d-4858-92b4-222a2e47e278",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_speedup(n, m, n_repeats=10):\n",
+    "    time_jax = timeit.timeit(lambda: greedy_search_jax(n, m), number=n_repeats) / n_repeats\n",
+    "    time_standard = timeit.timeit(lambda: thin(sample[:n], grad[:n], m), number=n_repeats) / n_repeats\n",
+    "    return time_standard / time_jax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e4ad32d8-1f47-4ed6-8013-008811a0d0f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6983045889520105"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_speedup(500_000, 100)"
    ]
   }
  ],
