--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -64,6 +64,8 @@
 
 \end{frame}
 
+
+
 \section{Background}
 
 \subsection{Markov Chain Monte Carlo (MCMC)}
@@ -86,6 +88,8 @@ P_i \xrightarrow[]{d} P \quad\text{as}\quad i \to \infty.
 \end{equation*}
 A sample of size $n$ is a realisation $(x_i)_{i=0}^n$ of the first $n$ variables in the chain, which is constructed sequentially.
 \end{frame}
+
+
 
 \subsection{Challenges of running MCMC}
 
@@ -124,6 +128,8 @@ A sample of size $n$ is a realisation $(x_i)_{i=0}^n$ of the first $n$ variables
 
 \end{frame}
 
+
+
 \subsection{Stein thinning}
 
 \begin{frame}
@@ -141,6 +147,8 @@ is closest to the target distribution.
 We need a measure of proximity of the selected subsample to the target distribution.
 
 \end{frame}
+
+
 
 \begin{frame}
 \frametitle{Measure of proximity}
@@ -167,136 +175,23 @@ as $m \to \infty$, for any sequence of distributions $P'_m$.
 \only<2>{
 However, it is \alert{difficult to compute} in practice:
 \begin{itemize}
-\item the integral $\int_\mathcal{X} f \diff P$ is often intractable,
-\item the supremum requires optimisation.
+\item<1-> the integral $\int_\mathcal{X} f \diff P$ is often intractable,
+	\begin{itemize}
+	\item[$\Rightarrow$]<2-> \cite{gorhamMeasuringSampleQuality2015}: use infinitesimal generator of the overdamped Langevin diffusion to eliminate $\int_\mathcal{X} f \diff P$.
+	\end{itemize}
+\item<1-> the supremum requires optimisation.
+	\begin{itemize}
+	\item[$\Rightarrow$]<2-> \cite{gorhamMeasuringSampleQuality2017}: use reproducing kernel Hilbert spaces to obtain the supremum in closed form.
+	\end{itemize}
 \end{itemize}
 }
 
 \end{frame}
 
-\begin{frame}
-\frametitle{Stein discrepancy}
 
-\begin{block}{Integral probability metric}
-An integral probability metric between two distributions $P$ and $P'$ is defined as
-\begin{equation*}
-\mathcal{D}_{\mathcal{F}}(P, P') \coloneq \sup_{f \in \mathcal{F}}\left|\int_\mathcal{X} f \diff P - \int_\mathcal{X} f \diff P' \right|,
-\end{equation*}
-where $\mathcal{X}$ is a measurable space on which both $P$ and $P'$ are defined and $\mathcal{F}$ is a set of test functions.
-\end{block}
-
-\begin{block}{Idea}
-
-Avoid the need to evaluate $\int_\mathcal{X} f \diff P$ by choosing a set of functions $\mathcal{F}$ such that $\int_\mathcal{X} f \diff P = 0$ for all $f \in \mathcal{F}$.
-
-\end{block}
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Stein discrepancy (continued)}
-
-\cite{gorhamMeasuringSampleQuality2015} observed that the infinitesimal generator of a Markov process $(Z_t)_{t \geq 0}$ given by
-\begin{equation*}
-(\mathcal{L}u)(x) \coloneq \lim_{t \to 0} \frac{\mathbb{E}[u(Z_t) | Z_0 = x] - u(x)}{t} \quad \text{for } u:\mathbb{R}^d \to \mathbb{R}
-\end{equation*}
-satisfies
-\begin{equation*}
-\mathbb{E}[(\mathcal{L} u) (Z)] = 0
-\end{equation*}
-under mild conditions on $\mathcal{L}$ and $u$.
-
-In the specific case of an overdamped Langevin diffusion
-$$\diff Z_t = \frac{1}{2} \nabla \log p(Z_t) \diff t + \diff W_t,$$
-where $p$ is the density of $P$ and $W_t$ is the standard Brownian motion, the infinitesimal generator becomes
-$$(\mathcal{L}_P u)(x) = \frac{1}{2} \langle \nabla u(x), \nabla \log p(x)\rangle + \frac{1}{2}\langle \nabla, \nabla u(x) \rangle.$$
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Stein discrepancy (continued)}
-
-The infinitesimal generator of an overdamped Langevin diffusion:
-$$(\mathcal{L}_P u)(x) = \frac{1}{2} \langle \nabla u(x), \nabla \log p(x)\rangle + \frac{1}{2}\langle \nabla, \nabla u(x) \rangle.$$
-
-Denoting $g  = \frac{1}{2}\nabla u$, \cite{gorhamMeasuringSampleQuality2015} obtain the Stein operator
-\begin{equation*}
-\mathcal{A}_P g \coloneq \langle g, \nabla \log p \rangle + \langle \nabla, g \rangle = \langle p^{-1}\nabla, p g \rangle,
-\label{eq:stein-operator}
-\end{equation*}
-and rewrite the expression for the integral probability metric as
-\begin{equation*}
-\mathcal{D}_{P, \mathcal{G}}(P') = \sup_{g \in \mathcal{G}}\left|\int_\mathcal{X} \mathcal{A}_P g \diff P' \right|
-\label{eq:stein-discrepancy-g}
-\end{equation*}
-for a suitably chosen set $\mathcal{G}$.
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Stein discrepancy (continued)}
-
-Using the Langevin Stein operator, the integral probability metric specialises to
-\begin{block}{Stein discrepancy}
-\begin{equation*}
-\mathcal{D}_{P, \mathcal{G}}(P') = \sup_{g \in \mathcal{G}}\left|\int_\mathcal{X} \mathcal{A}_P g \diff P' \right|
-\end{equation*}
-\end{block}
-
-The difficulty evaluating the supremum still remains.
-
-\begin{block}{Idea}
-Employ the kernel trick to eliminate the supremum in the expression for the integral probability metric.
-\end{block}
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Reproducing kernel Hilbert space}
-
-A \textit{Hilbert space} is a vector space $V$ equipped with the inner product operation $\langle \cdot, \cdot \rangle$ and its induced norm $\|\cdot\|$ satisfying $\|v\|^2 = \langle v, v \rangle$ for all $v \in V$, if it is complete:
-\begin{equation*}
-\sum_{i=1}^\infty \|v_i\| < \infty \quad \text{implies} \quad \sum_{i=1}^\infty v_i \in V
-\end{equation*}
-for any sequence $v_i \in V$.
-
-A Hilbert space $\mathcal{H}$ of real-valued functions defined on a set $\mathcal{X}$ is called a \textit{reproducing kernel Hilbert space (RKHS)} if there exists a function $k: \mathcal{X} \times \mathcal{X} \to \mathbb{R}$ such that:
-\begin{itemize}
-\item for every $x \in \mathcal{X}$, the function $k(x, \cdot)$ belongs to $\mathcal{H}$,
-\item $k$ satisfies the reproducing property $\langle f(\cdot), k(\cdot, x)\rangle = f(x)$ for any $f \in \mathcal{H}$ and $x \in \mathcal{X}$.
-\end{itemize}
-
-We denote $\mathcal{H}(k)$ the RKHS with kernel $k$.
-
-\end{frame}
 
 \begin{frame}
 \frametitle{Kernel Stein discrepancy}
-
-Taking the unit-ball in a Cartesian product of $d$ copies $\mathcal{H}(k)$
-\begin{equation*}
-\mathcal{G} \coloneq \left\{ \mathrm{g} : \mathbb{R}^d \to \mathbb{R}^d \left| \sum_{i=1}^d \|g_i\|^2_{\mathcal{H}(k)} \leq 1 \right.\right\},
-\label{eq:unit-ball}
-\end{equation*}
-Proposition~2 in \cite{gorhamMeasuringSampleQuality2017} shows that the Stein discrepancy becomes
-\begin{equation*}
-\mathcal{D}_{P}^2(P') \coloneq \mathcal{D}_{P, \mathcal{G}}(P') = \iint_\mathcal{X} k_P(x, y) \diff p'(x) \diff p'(y),
-\label{eq:stein-discrepancy-sqrt-expectation}
-\end{equation*}
-where $p'$ is the density of $P'$, and $k_P(x, y)$ is given by
-\begin{equation*}
-\begin{aligned}
-k_P(x, y) \coloneq 
-&(\nabla_x\cdot\nabla_y) k(x,y) \\
-&+ \langle \nabla_x k(x, y), \nabla_y \log p(y) \rangle + \langle \nabla_y k(x, y), \nabla_x \log p(x) \rangle \\
-&+ k(x, y) \langle \nabla_x \log p(x), \nabla_y \log p(y) \rangle.
-\end{aligned}
-\end{equation*}
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Kernel Stein discrepancy (continued)}
 
 \begin{block}{Kernel Stein discrepancy (KSD)}
 \begin{equation*}
@@ -305,10 +200,9 @@ k_P(x, y) \coloneq
 
 \end{block}
 
-If $P'$ is the discrete distribution, this becomes
+If $P'$ is a discrete distribution, this becomes
 \begin{equation*}
 \mathcal{D}_{P}^2\left(\frac{1}{n} \sum_{i=1}^n \delta(x_i)\right) = \frac{1}{n^2} \sum_{i,j=1}^n k_P(x_i, x_j),
-\label{eq:ksd:discrete}
 \end{equation*}
 where
 \begin{equation*}
@@ -326,17 +220,6 @@ k(x, y) = \left(c^2 + \|\Gamma^{-1/2}(x-y)\|\right)^\beta.
 
 \end{frame}
 
-\begin{frame}
-\frametitle{Inverse multiquadric kernel}
-
-The common choice of the kernel $k$ is the inverse multiquadric kernel (IMQ)
-\begin{equation*}
-k(x, y) = \left(c^2 + \|\Gamma^{-1/2}(x-y)\|\right)^\beta.
-\end{equation*}
-
-When $\beta \in (-1, 0)$ and $\Gamma = I$, \cite{gorhamMeasuringSampleQuality2017} demonstrate that $\mathcal{D}_{P}(P')$ provides convergence control (Theorem 8). Theorem 4 in \cite{chenSteinPointMarkov2019} justifies the introduction of $\Gamma$ in IMQ.
-
-\end{frame}
 
 \begin{frame}
 \frametitle{Stein thinning}
@@ -361,6 +244,8 @@ $$\pi(j) \in \argmin_{i=1,\dots,n} \frac{k_P(x_i, x_i)}{2} + \sum_{j'=1}^{j-1} k
 
 \end{frame}
 
+
+
 \subsection{Gradient-free kernel Stein discrepancy}
 
 \begin{frame}
@@ -380,6 +265,8 @@ k_P(x, y) \coloneq
 This might be expensive, although it can be easily parallelised.
 
 \end{frame}
+
+
 
 \begin{frame}
 \frametitle{Gradient-free kernel Stein discrepancy}
@@ -403,6 +290,8 @@ k_Q(x, y) \coloneq
 When $k(x,y)$ is the inverse multiquadric kernel, the gradient-free KSD offers convergence control (Theorem 2 in \cite{fisherGradientFreeKernelStein2024}).
 
 \end{frame}
+
+
 
 \section{Methodology}
 
@@ -437,6 +326,8 @@ We modify the algorithm of \cite{riabizOptimalThinningMCMC2022} to minimise the 
 
 \end{frame}
 
+
+
 \begin{frame}
 
 \begin{algorithm}[H]
@@ -464,6 +355,8 @@ Set $\pi(j) = \argmin_i A[i]$ \;
 
 \end{frame}
 
+
+
 \subsection{Evaluation}
 
 \begin{frame}
@@ -471,12 +364,14 @@ Set $\pi(j) = \argmin_i A[i]$ \;
 
 The following protocol was used in the evaluating the new method:
 \begin{enumerate}
-\item obtain a sample from the target distribution (depending on the test case, the sampling is done either i.i.d.\ or via MCMC),
-\item apply na\"ive thinning, Stein thinning and the proposed algorithm to get a thinned sample of a given cardinality,
-\item evaluate the result of thinning using an impartial metric.
+\item obtain a sample from the target distribution,
+\item apply thinning to get a subsample of a given cardinality,
+\item evaluate the result using an impartial metric.
 \end{enumerate}
 
 \end{frame}
+
+
 
 \begin{frame}
 \frametitle{Energy distance}
@@ -496,8 +391,9 @@ For samples $x_1, \dots, x_n$ and $y_1, \dots, y_m$ from $X$ and $Y$, respective
 \mathcal{E}_{n,m}(P, Q) \coloneq \frac{2}{nm}\sum_{i=1}^n \sum_{j=1}^m \|x_i - y_j\| - \frac{1}{n^2} \sum_{i=1}^n\sum_{j=1}^n \|x_i - x_j\| - \frac{1}{m^2} \sum_{i=1}^m \sum_{j=1}^m \|y_i - y_j\|.
 \end{equation*}
 
-
 \end{frame}
+
+
 
 \section{Results}
 
@@ -506,29 +402,17 @@ For samples $x_1, \dots, x_n$ and $y_1, \dots, y_m$ from $X$ and $Y$, respective
 \begin{frame}
 \frametitle{Bivariate Gaussian mixture}
 
-We use the bivariate Gaussian mixture with means 
-$$
-\mu_1 = \begin{pmatrix} -1 \\ -1 \end{pmatrix}, \qquad
-\mu_2 = \begin{pmatrix} 1 \\ 1 \end{pmatrix},
-$$
-covariance matrices
+We use the bivariate Gaussian mixture with component weights $w = (0.3, 0.7)^T$, means $\mu_1=(-1, -1)^T$, $\mu_2 = (1, 1)^T$ and covariances
 $$
 \Sigma_1 = \begin{pmatrix}
 0.5 & 0.25\\
 0.25 & 1
-\end{pmatrix}, \qquad
+\end{pmatrix}, \quad
 \Sigma_2 = \begin{pmatrix}
 2 & -0.8 \sqrt{3}\\
 -0.8 \sqrt{3} & 1.5
-\end{pmatrix}
+\end{pmatrix}.
 $$
-and weights
-$$w = \begin{pmatrix} 0.3 \\ 0.7 \end{pmatrix}.$$
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Bivariate Gaussian mixture: sample}
 
 We obtain 1000 points by directly drawing from the target distribution:
 
@@ -540,6 +424,8 @@ We obtain 1000 points by directly drawing from the target distribution:
 \end{figure}
 
 \end{frame}
+
+
 
 \begin{frame}
 \frametitle{Bivariate Gaussian mixture: thinning approaches}
@@ -558,6 +444,8 @@ We evaluate the following approaches:
 
 \end{frame}
 
+
+
 \begin{frame}
 \frametitle{Bivariate Gaussian mixture: thinning results}
 
@@ -570,6 +458,8 @@ We evaluate the following approaches:
 
 \end{frame}
 
+
+
 \begin{frame}
 \frametitle{Bivariate Gaussian mixture: comparison of approaches}
 
@@ -581,6 +471,8 @@ We evaluate the following approaches:
 \end{figure}
 
 \end{frame}
+
+
 
 \subsection{Lotka-Volterra inverse problem}
 
@@ -608,6 +500,8 @@ u_1(t) \\ u_2(t)
 infer $\theta = (\theta_1, \dots, \theta_4)^T$ that best describes the observed behaviour.
 
 \end{frame}
+
+
 
 \begin{frame}
 \frametitle{Lotka-Volterra inverse problem: synthetic data}
@@ -638,6 +532,8 @@ We then add bivariate i.i.d.\ Gaussian noise:
 
 \end{frame}
 
+
+
 \begin{frame}
 \frametitle{Lotka-Volterra inverse problem: synthetic data}
 
@@ -651,6 +547,8 @@ The resulting noisy data is used as the input for the inverse problem:
 \end{figure}
 
 \end{frame}
+
+
 
 \begin{frame}
 \frametitle{Lotka-Volterra inverse problem: Bayesian inference}
@@ -676,6 +574,327 @@ p(\theta) \propto \mathcal{L}(\theta) \pi(\theta).
 \end{equation*}
 
 \end{frame}
+
+
+
+\begin{frame}
+\frametitle{Lotka-Volterra inverse problem: MCMC sample}
+
+The inference is performed using the Metropolis-Hastings algorithm with the starting points taken from \cite{riabizOptimalThinningMCMC2022}.
+
+Since the parameters $\theta_k$ of the Lotka-Volterra model are positive, we run MCMC in the log-space by applying the reparameterisation $\zeta_k = \log \theta_k$. 
+
+We run 500,000 iterations of the algorithm for each chain.
+
+
+The sample from the first chain is shown here for illustration:
+
+\begin{figure}[h]
+\centering
+\makebox[\textwidth][c]{
+	\includegraphics[width=0.8\textwidth]{lotka-volterra-chain1-sample.png}
+}
+\end{figure}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Lotka-Volterra inverse problem: thinning approaches}
+
+We evaluate the following approaches:
+\begin{itemize}
+\item na\"ive thinning,
+\item standard Stein thinning,
+\item gradient-free Stein thinning with different choices of $Q$:
+	\begin{itemize}
+	\item multivariate Gaussian using the sample mean and covariance,
+	\item Laplace approximation - \alert{fails as in bivariate Gaussian case},
+	\item KDE approximation - \alert{computationally expensive}.
+	\end{itemize}
+\end{itemize}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Lotka-Volterra inverse problem: comparison of approaches}
+
+Gradient-free thinning using a multivariate Gaussian with the sample mean and covariance matrix performs comparably with the gradient-based approach, notably for chain 4, when compared using the energy distance:
+
+\begin{figure}[h]
+\centering
+\makebox[\textwidth][c]{
+	\includegraphics[width=0.8\textwidth]{lotka-volterra-gf-thinning-energy-distance.pdf}
+}
+\end{figure}
+
+\end{frame}
+
+
+
+\section{Conclusions}
+
+\begin{frame}
+\frametitle{Contribution}
+
+The project makes three contributions:
+\begin{itemize}
+\item implementation of the gradient-free Stein thinning algorithm in the Python library \texttt{stein-thinning},
+\item evaluation of the performance of the proposed algorithm,
+\item improvement of the computational efficiency of the existing Stein thinning algorithm from $O(nm^2)$ to $O(nm)$, where $n$ is the input sample size and $m$ is the desired thinned sample size.
+\end{itemize}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Conclusions}
+
+\begin{itemize}
+\item The gradient-free approach is feasible and performs similarly to the Stein thinning algorithm of \cite{riabizOptimalThinningMCMC2022} for small thinned sample sizes.
+\item The performance of the algorithm depends crucially on the choice of the auxiliary distribution. For example, even in the highly favourable setting of i.i.d.\ samples from a Gaussian mixture, choosing the auxiliary distribution based on the Laplace approximation fails to produce a thinned sample.
+\item The simple multivariate Gaussian distribution using the sample mean and covariance offered a good starting point in our experiments, however bespoke treatment might be required for more complex problems.
+\item In deciding whether to use the new algorithm as opposed to the gradient-based approach, the effort involved in selecting a good auxiliary distribution must be weighed against the computational cost of obtaining gradients.
+\end{itemize}
+
+\end{frame}
+
+
+
+\section{Further Research}
+
+\begin{frame}
+\frametitle{Further Research}
+\begin{itemize}
+
+\item Parallelise the computation of KDE.
+
+\item Perform thinning in a lower-dimensional space.
+
+\item Investigate the behaviour of Stein thinning for large thinned sample sizes.
+
+\item Compare the performance of the approaches in terms of estimating the true parameters of the Lotka-Volterra model.
+
+\item Run an experiment with randomised starting points.
+
+\item Repeat the experiments with more advanced MCMC algorithms. 
+
+\item Check how running a gradient-free MCMC sampling algorithm (such the random-walk Metropolis-Hastings) followed by Stein thinning of the sample compares to running a gradient-based sampling algorithm (e.g. HMC).
+
+\item Provide theoretical justification for gradient-free Stein thinning.
+
+\item Explore other gradient-free alternatives.
+
+\end{itemize}
+
+\end{frame}
+
+
+
+
+\section{References}
+
+\begin{frame}[allowframebreaks]
+\frametitle{References}
+
+\fontsize{8pt}{12}\selectfont
+
+\bibliographystyle{../report/plainnat_modified}
+\bibliography{../report/biblio}
+
+\end{frame}
+
+
+
+\section{Additional slides}
+
+\begin{frame}
+\frametitle{Stein discrepancy}
+
+\begin{block}{Integral probability metric}
+An integral probability metric between two distributions $P$ and $P'$ is defined as
+\begin{equation*}
+\mathcal{D}_{\mathcal{F}}(P, P') \coloneq \sup_{f \in \mathcal{F}}\left|\int_\mathcal{X} f \diff P - \int_\mathcal{X} f \diff P' \right|,
+\end{equation*}
+where $\mathcal{X}$ is a measurable space on which both $P$ and $P'$ are defined and $\mathcal{F}$ is a set of test functions.
+\end{block}
+
+\begin{block}{Idea}
+
+Avoid the need to evaluate $\int_\mathcal{X} f \diff P$ by choosing a set of functions $\mathcal{F}$ such that $\int_\mathcal{X} f \diff P = 0$ for all $f \in \mathcal{F}$.
+
+\end{block}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Stein discrepancy (continued)}
+
+\cite{gorhamMeasuringSampleQuality2015} use the infinitesimal generator of the overdamped Langevin diffusion to eliminate the integral $\int_\mathcal{X} f \diff P$.
+
+\begin{block}{Infinitesimal generator}
+The infinitesimal generator $\mathcal{L}$ of a stochastic process $(Z_t)_{t \geq 0}$ is given by
+\begin{equation*}
+(\mathcal{L}u)(x) \coloneq \lim_{t \to 0} \frac{\mathbb{E}[u(Z_t) | Z_0 = x] - u(x)}{t} \quad \text{for } u:\mathbb{R}^d \to \mathbb{R}.
+\end{equation*}
+\end{block}
+
+\begin{block}{Overdamped Langevin diffusion}
+The overdamped Langevin diffusion is a stochastic process defined by
+\begin{equation*}
+\diff Z_t = \frac{1}{2} \nabla \log p(Z_t) \diff t + \diff W_t,
+\end{equation*}
+where $p$ is the density of $P$ and $W_t$ is the standard Brownian motion.
+\end{block}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Stein discrepancy (continued)}
+
+The infinitesimal generator of an overdamped Langevin diffusion:
+$$(\mathcal{L}_P u)(x) = \frac{1}{2} \langle \nabla u(x), \nabla \log p(x)\rangle + \frac{1}{2}\langle \nabla, \nabla u(x) \rangle.$$
+
+Denoting $g  = \frac{1}{2}\nabla u$, \cite{gorhamMeasuringSampleQuality2015} obtain the Stein operator
+\begin{equation*}
+\mathcal{A}_P g \coloneq \langle g, \nabla \log p \rangle + \langle \nabla, g \rangle = \langle p^{-1}\nabla, p g \rangle,
+\label{eq:stein-operator}
+\end{equation*}
+and demonstrate that
+\begin{equation*}
+\int_{\mathcal{X}} \mathcal{A}_P g \diff P = 0
+\end{equation*}
+for a suitably chosen set $\mathcal{G}$, enabling them to rewrite the expression for the integral probability metric as
+\begin{equation*}
+\mathcal{D}_{P, \mathcal{G}}(P') = \sup_{g \in \mathcal{G}}\left|\int_\mathcal{X} \mathcal{A}_P g \diff P' \right|
+\label{eq:stein-discrepancy-g}
+\end{equation*}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Stein discrepancy (continued)}
+
+Using the Langevin Stein operator, the integral probability metric specialises to
+\begin{block}{Stein discrepancy}
+\begin{equation*}
+\mathcal{D}_{P, \mathcal{G}}(P') = \sup_{g \in \mathcal{G}}\left|\int_\mathcal{X} \mathcal{A}_P g \diff P' \right|
+\end{equation*}
+\end{block}
+
+The difficulty evaluating the supremum still remains.
+
+\begin{block}{Idea}
+Employ the kernel trick to eliminate the supremum in the expression for the integral probability metric.
+\end{block}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Reproducing kernel Hilbert space}
+
+A \textit{Hilbert space} is a vector space $V$ equipped with the inner product operation $\langle \cdot, \cdot \rangle$ and its induced norm $\|\cdot\|$ satisfying $\|v\|^2 = \langle v, v \rangle$ for all $v \in V$, if it is complete:
+\begin{equation*}
+\sum_{i=1}^\infty \|v_i\| < \infty \quad \text{implies} \quad \sum_{i=1}^\infty v_i \in V
+\end{equation*}
+for any sequence $v_i \in V$.
+
+A Hilbert space $\mathcal{H}$ of real-valued functions defined on a set $\mathcal{X}$ is called a \textit{reproducing kernel Hilbert space (RKHS)} if there exists a function $k: \mathcal{X} \times \mathcal{X} \to \mathbb{R}$ such that:
+\begin{itemize}
+\item for every $x \in \mathcal{X}$, the function $k(x, \cdot)$ belongs to $\mathcal{H}$,
+\item $k$ satisfies the reproducing property $\langle f(\cdot), k(\cdot, x)\rangle = f(x)$ for any $f \in \mathcal{H}$ and $x \in \mathcal{X}$.
+\end{itemize}
+
+We denote $\mathcal{H}(k)$ the RKHS with kernel $k$.
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Kernel Stein discrepancy}
+
+Taking the unit-ball in a Cartesian product of $d$ copies $\mathcal{H}(k)$
+\begin{equation*}
+\mathcal{G} \coloneq \left\{ \mathrm{g} : \mathbb{R}^d \to \mathbb{R}^d \left| \sum_{i=1}^d \|g_i\|^2_{\mathcal{H}(k)} \leq 1 \right.\right\},
+\label{eq:unit-ball}
+\end{equation*}
+Proposition~2 in \cite{gorhamMeasuringSampleQuality2017} shows that the Stein discrepancy becomes
+\begin{equation*}
+\mathcal{D}_{P}^2(P') \coloneq \mathcal{D}_{P, \mathcal{G}}(P') = \iint_\mathcal{X} k_P(x, y) \diff p'(x) \diff p'(y),
+\label{eq:stein-discrepancy-sqrt-expectation}
+\end{equation*}
+where $p'$ is the density of $P'$, and $k_P(x, y)$ is given by
+\begin{equation*}
+\begin{aligned}
+k_P(x, y) \coloneq 
+&(\nabla_x\cdot\nabla_y) k(x,y) \\
+&+ \langle \nabla_x k(x, y), \nabla_y \log p(y) \rangle + \langle \nabla_y k(x, y), \nabla_x \log p(x) \rangle \\
+&+ k(x, y) \langle \nabla_x \log p(x), \nabla_y \log p(y) \rangle.
+\end{aligned}
+\end{equation*}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Kernel Stein discrepancy (continued)}
+
+\begin{block}{Kernel Stein discrepancy (KSD)}
+\begin{equation*}
+\mathcal{D}_{P}^2(P') \coloneq \iint_\mathcal{X} k_P(x, y) \diff p'(x) \diff p'(y),
+\end{equation*}
+
+\end{block}
+
+If $P'$ is a discrete distribution, this becomes
+\begin{equation*}
+\mathcal{D}_{P}^2\left(\frac{1}{n} \sum_{i=1}^n \delta(x_i)\right) = \frac{1}{n^2} \sum_{i,j=1}^n k_P(x_i, x_j),
+\end{equation*}
+where
+\begin{equation*}
+\begin{aligned}
+k_P(x, y) \coloneq 
+&(\nabla_x\cdot\nabla_y) k(x,y) \\
+&+ \langle \nabla_x k(x, y), \nabla_y \log p(y) \rangle + \langle \nabla_y k(x, y), \nabla_x \log p(x) \rangle \\
+&+ k(x, y) \langle \nabla_x \log p(x), \nabla_y \log p(y) \rangle.
+\end{aligned}
+\end{equation*}
+The typical choice for $k(x, y)$ is the inverse multiquadric kernel:
+\begin{equation*}
+k(x, y) = \left(c^2 + \|\Gamma^{-1/2}(x-y)\|\right)^\beta.
+\end{equation*}
+
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Inverse multiquadric kernel}
+
+The common choice of the kernel $k$ is the inverse multiquadric kernel (IMQ)
+\begin{equation*}
+k(x, y) = \left(c^2 + \|\Gamma^{-1/2}(x-y)\|\right)^\beta.
+\end{equation*}
+
+When $\beta \in (-1, 0)$ and $\Gamma = I$, \cite{gorhamMeasuringSampleQuality2017} demonstrate that $\mathcal{D}_{P}(P')$ provides convergence control (Theorem 8). Theorem 4 in \cite{chenSteinPointMarkov2019} justifies the introduction of $\Gamma$ in IMQ.
+
+\end{frame}
+
+
 
 \begin{frame}
 \frametitle{Lotka-Volterra inverse problem: MCMC}
@@ -703,36 +922,7 @@ We run 500,000 iterations of the algorithm for each chain.
 
 \end{frame}
 
-\begin{frame}
-\frametitle{Lotka-Volterra inverse problem: MCMC sample}
 
-The sample from the first chain is shown here for illustration:
-
-\begin{figure}[h]
-\centering
-\makebox[\textwidth][c]{
-	\includegraphics[width=0.95\textwidth]{lotka-volterra-chain1-sample.png}
-}
-\end{figure}
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Lotka-Volterra inverse problem: thinning approaches}
-
-We evaluate the following approaches:
-\begin{itemize}
-\item na\"ive thinning,
-\item standard Stein thinning,
-\item gradient-free Stein thinning with different choices of $Q$:
-	\begin{itemize}
-	\item multivariate Gaussian using the sample mean and covariance,
-	\item Laplace approximation - \alert{fails as in bivariate Gaussian case},
-	\item KDE approximation - \alert{computationally infeasible}.
-	\end{itemize}
-\end{itemize}
-
-\end{frame}
 
 \begin{frame}
 \frametitle{Lotka-Volterra inverse problem: Stein thinning}
@@ -748,19 +938,7 @@ We have a choice of applying thinning in linear or logarithmic space, however th
 
 \end{frame}
 
-\begin{frame}
-\frametitle{Lotka-Volterra inverse problem: comparison of approaches}
 
-Gradient-free thinning using a multivariate Gaussian with the sample mean and covariance matrix performs comparably with the gradient-based approach, notably for chain 4, when compared using the energy distance:
-
-\begin{figure}[h]
-\centering
-\makebox[\textwidth][c]{
-	\includegraphics[width=0.8\textwidth]{lotka-volterra-gf-thinning-energy-distance.pdf}
-}
-\end{figure}
-
-\end{frame}
 
 \begin{frame}
 \frametitle{Lotka-Volterra inverse problem: comparison of approaches}
@@ -773,83 +951,6 @@ Gradient-free thinning offers a significant improvement over na\"ive thinning in
 	\includegraphics[width=0.8\textwidth]{lotka-volterra-gf-thinning-ksd.pdf}
 }
 \end{figure}
-
-\end{frame}
-
-\section{Conclusions}
-
-\begin{frame}
-\frametitle{Contribution}
-
-The project makes three contributions:
-\begin{itemize}
-\item implementation of the gradient-free Stein thinning algorithm in the Python library \texttt{stein-thinning},
-\item evaluation of the performance of the proposed algorithm,
-\item improvement of the computational efficiency of the existing Stein thinning algorithm from $O(nm^2)$ to $O(nm)$, where $n$ is the input sample size and $m$ is the desired thinned sample size.
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Conclusions}
-
-\begin{itemize}
-\item The gradient-free approach is feasible and performs similarly to the Stein thinning algorithm of \cite{riabizOptimalThinningMCMC2022} for small thinned sample sizes,
-\item The performance of the algorithm depends crucially on the choice of the auxiliary distribution. For example, even in the highly favourable setting of i.i.d.\ samples from a Gaussian mixture, choosing the auxiliary distribution based on the Laplace approximation fails to produce a thinned sample.
-\item The simple multivariate Gaussian distribution using the sample mean and covariance offered a good starting point in our experiments, however bespoke treatment might be required for more complex problems.
-\item In deciding whether to use the new algorithm as opposed to the gradient-based approach, the effort involved in selecting a good auxiliary distribution must be weighed against the computational cost of obtaining gradients.
-\end{itemize}
-
-\end{frame}
-
-\section{Further Research}
-
-\begin{frame}
-\frametitle{Further Research}
-\begin{itemize}
-
-\item Evaluate the choices of KDE kernels other than Gaussian for constructing the auxiliary distribution.
-
-\item Parallelise the computation of KDE.
-
-\item Perform thinning in a lower-dimensional space.
-
-\item Investigate the behaviour of Stein thinning for large thinned sample sizes.
-
-\item Compare the performance of the approaches in terms of estimating the true parameters of the Lotka-Volterra model.
-
-\item Run an experiment with randomised starting points.
-
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}
-\frametitle{Further Research (continued)}
-
-\begin{itemize}
-
-\item Repeat the experiments with more advanced MCMC algorithms. 
-
-\item Check how running a gradient-free MCMC sampling algorithm (such the random-walk Metropolis-Hastings) followed by Stein thinning of the sample compares to running a gradient-based sampling algorithm (e.g. HMC).
-
-\item Provide theoretical justification for gradient-free Stein thinning.
-
-\item Explore other gradient-free alternatives.
-
-\end{itemize}
-
-\end{frame}
-
-\section{References}
-
-\begin{frame}[allowframebreaks]
-\frametitle{References}
-
-\fontsize{10pt}{12}\selectfont
-
-\bibliographystyle{../report/plainnat_modified}
-\bibliography{../report/biblio}
 
 \end{frame}
 
