Minor wording improvement in the report

--- a/report/report.tex
+++ b/report/report.tex
@@ -538,7 +538,7 @@ In \Cref{fig:gmm:laplace-terms}(a) and (b), we show the scale of the two terms o
 \label{fig:gmm:laplace-terms}}
 \end{figure}
 
-The second iteration of the algorithm then seeks to find
+The second iteration of the algorithm then aims to find
 \begin{equation*}
 \begin{aligned}
 &\argmin_i \frac{k_{P,Q}(x_i, x_i)}{2} + k_{P,Q}(x_i, x_{\pi(1)}) \\
