--- a/code/notebooks/lotka_volterra/Sampling.ipynb
+++ b/code/notebooks/lotka_volterra/Sampling.ipynb
@@ -25,10 +25,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import scipy\n",
-    "from scipy.optimize import minimize\n",
-    "import scipy.stats as stats\n",
-    "\n",
     "import arviz as az\n",
     "\n",
     "import stan\n",
@@ -36,13 +32,12 @@
     "from s3fs.core import S3FileSystem\n",
     "\n",
     "import lotka_volterra\n",
-    "from mcmc import sample_chain, metropolis_random_walk_step, rw_proposal_sampler\n",
+    "from toy_mcmc import sample_chain, metropolis_random_walk_step, rw_proposal_sampler, to_arviz\n",
     "import utils.caching\n",
     "from utils.caching import make_cached_s3\n",
     "from utils.parallel import get_map_parallel_joblib\n",
     "from utils.paths import FIGURES_PATH, S3_BUCKET_NAME\n",
-    "from utils.plotting import highlight_points, plot_paths, plot_traces\n",
-    "from utils.sampling import to_arviz"
+    "from utils.plotting import highlight_points, plot_paths, plot_traces"
    ]
   },
   {
@@ -1097,7 +1092,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1111,7 +1106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
